<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_search"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/layout_et_search"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_outer_big"
        android:layout_marginEnd="@dimen/margin_outer_big"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/et_hint_search"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <include

        android:id="@+id/error_message"
        layout="@layout/error_layout" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_outer_small"
        android:layout_marginStart="@dimen/margin_outer_small"
        android:layout_marginEnd="@dimen/margin_outer_small"
        android:layout_marginBottom="?attr/actionBarSize"

        />


</LinearLayout>