<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.example.qfilm.ui.adapters.GlideBindingAdapter" />

        <variable
            name="showOriginalTitles"
            type="Boolean"/>

        <variable
            name="obj"
            type="com.example.qfilm.data.models.entities.Result"/>


    </data>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <androidx.cardview.widget.CardView

            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:background="?attr/colorSecondary"
            android:layout_marginBottom="4dp"

            >

            <ImageView
                android:id="@+id/iv_poster"
                android:scaleType="fitXY"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height"
                android:background="?attr/colorSecondary"

                android:src="@drawable/ic_sharp_local_movies_24"
                app:imageUrl="@{obj.posterPath}"/>

        </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_title"
                    android:text="@{showOriginalTitles ? obj.getOriginalTitle() : obj.getTitle()}"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_width="@dimen/poster_width"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Qfilm.label"/>

    </LinearLayout>
</layout>
