...
    <!-- Profile fragment -->

    <string name="description_button_create_new_collection">Button create new collection</string>
    <string name="hint_collection_name">Collection name</string>
    <string name="description_button_settings">Button settings</string>
    <string name="btn_new_collection">New collection</string>
    <string name="movies_and_series"> %1$d movies &amp; series</string>

    <!-- CollectionsFragment  -->

    <string name="tv_no_collections_yet">No collections yet!</string>
    <string name="tv_heading_no_saved_collections">No collections yet</string>
    <string name="tv_no_saved_collections">Save your favourite movies and series in different collections</string>


    <!-- FireStore edits  -->

    <string name="create_empty_collection_failed">Failed to create %1$s</string>
    <string name="update_collection_name_failed">Failed to update collection name</string>
...
    <string name="item_already_added">%1$s already added to %2$s</string>

    <!-- Common error layout -->

    <string name="error_no_network_headline">You are offline</string>
    <string name="error_no_network_message">You have to be connected to internet to browse LGBTQ movies &amp; series</string>
    <string name="error_unknown_heading">Unknown network error occurred"</string>
    <string name="error_unknown_message">We are very sorry about this, please try again</string>
    <string name="btn_try_again">Try again</string>

    <!-- CollectionFragment  -->

    <string name="tv_heading_empty_collection">Empty collection</string>
    <string name="tv_empty_collection">Add movies &amp; series by visiting their detail page</string>

...
